@@ -437,35 +437,58 @@ class Header(object):
             close_file = True
 
         try:
-            return cls._fromfile_internal(fileobj, sep, endcard, padding)
+            is_binary = fileobj_is_binary(fileobj)
+
+            def block_iter(nbytes):
+                while True:
+                    data = fileobj.read(nbytes)
+
+                    if data:
+                        yield data
+                    else:
+                        break
+
+            return cls._from_blocks(block_iter, is_binary, sep, endcard,
+                                    padding)[1]
         finally:
             if close_file:
                 fileobj.close()
 
     @classmethod
-    def _fromfile_internal(cls, fileobj, sep, endcard, padding):
+    def _from_blocks(cls, block_iter, is_binary, sep, endcard, padding):
         """
         The meat of `Header.fromfile`; in a separate method so that
         `Header.fromfile` itself is just responsible for wrapping file
-        handling.
+        handling.  Also used by `_BaseHDU.fromstring`.
+
+        ``block_iter`` should be a callable which, given a block size n
+        (typically 2880 bytes as used by the FITS standard) returns an iterator
+        of byte strings of that block size.
+
+        ``is_binary`` specifies whether the returned blocks are bytes or text
+
+        Returns both the entire header *string*, and the `Header` object
+        returned by Header.fromstring on that string.
         """
 
-        is_binary = fileobj_is_binary(fileobj)
         actual_block_size = _block_size(sep)
         clen = Card.length + len(sep)
 
+        blocks = block_iter(actual_block_size)
+
         # Read the first header block.
-        block = fileobj.read(actual_block_size)
+        try:
+            block = next(blocks)
+        except StopIteration:
+            raise EOFError()
+
         if not is_binary:
             # TODO: There needs to be error handling at *this* level for
             # non-ASCII characters; maybe at this stage decoding latin-1 might
             # be safer
             block = encode_ascii(block)
 
-        if not block:
-            raise EOFError()
-
-        blocks = []
+        read_blocks = []
         is_eof = False
         end_found = False
 
@@ -474,12 +497,16 @@ class Header(object):
             # find the END card
             end_found, block = cls._find_end_card(block, clen)
 
-            blocks.append(decode_ascii(block))
+            read_blocks.append(decode_ascii(block))
 
             if end_found:
                 break
 
-            block = fileobj.read(actual_block_size)
+            try:
+                block = next(blocks)
+            except StopIteration:
+                is_eof = True
+                break
 
             if not block:
                 is_eof = True
@@ -493,11 +520,11 @@ class Header(object):
             # rather than raising an exception
             raise IOError('Header missing END card.')
 
-        blocks = ''.join(blocks)
+        header_str = ''.join(read_blocks)
 
         # Strip any zero-padding (see ticket #106)
-        if blocks and blocks[-1] == '\0':
-            if is_eof and blocks.strip('\0') == '':
+        if header_str and header_str[-1] == '\0':
+            if is_eof and header_str.strip('\0') == '':
                 # TODO: Pass this warning to validation framework
                 warnings.warn(
                     'Unexpected extra padding at the end of the file.  This '
@@ -511,17 +538,17 @@ class Header(object):
                     'Header block contains null bytes instead of spaces for '
                     'padding, and is not FITS-compliant. Nulls may be '
                     'replaced with spaces upon writing.')
-                blocks.replace('\0', ' ')
+                header_str.replace('\0', ' ')
 
-        if padding and (len(blocks) % actual_block_size) != 0:
+        if padding and (len(header_str) % actual_block_size) != 0:
             # This error message ignores the length of the separator for
             # now, but maybe it shouldn't?
-            actual_len = len(blocks) - actual_block_size + BLOCK_SIZE
+            actual_len = len(header_str) - actual_block_size + BLOCK_SIZE
             # TODO: Pass this error to validation framework
             raise ValueError('Header size is not multiple of %d: %d'
                              % (BLOCK_SIZE, actual_len))
 
-        return cls.fromstring(blocks, sep=sep)
+        return header_str, cls.fromstring(header_str, sep=sep)
 
     @classmethod
     def _find_end_card(cls, block, card_len):
